[package]
name = "dic"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
terminal-link = "0.1.0"
